# APTrajectories

./: .gitignore  Readme.md  example.ipynb  fin_evapos.h5  my_apt_imp.pyprofile  my_apt_imp.txt  pyproject.toml  tip_pos.h5  tip_pos_charge.h5  tip_surf_ind.h5
.github/workflows/: pull_request.yml  python-publish.yml
DataUtils/: structure.py
Example/: fin_evapos.h5  tip_pos_charge.h5  tip_surf_ind.h5
Example_pyiron/: test.h5
Example_pyiron/test_hdf5/test/: fin_evapos.h5  tip_pos.h5  tip_pos_charge.h5  tip_surf_ind.h5
PyironIntegration/: pyironjob.py
RobinRollandModel/: RRModel.py  datautils.py  main.py  new_main.py  pyironjob.py  updated_main.py
notebooks/Example_pyiron/test_hdf5/test/: WARNING_pyiron_modified_content  det_coordinates.h5  fin_evapos.h5  tip_pos.h5  tip_pos_charge.h5  tip_surf_ind.h5
notebooks/Example_update/: det_coordinates.h5  fin_evapos.h5  tip_pos.h5  tip_pos_charge.h5  tip_surf_ind.h5
tests/: test_main.py
