[tool.poetry]
name = "aptrajectories"
version = "0.1.1"
description = "Simulates APT trajectories based on Robin Rolland charge equilibration model"
authors = ["skatnagallu <s.katnagallu@mpie.de>"]
license = "\"Apache 2.0\""
readme = "README.md"
packages = [
    { include = "RobinRollandModel" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.26.4"
scipy = "^1.12.0"
pyiron_base = "^0.7.9"
pyiron = "^0.5.2"
nglview = "^3.1.1"
nbformat = "^5.9.2"
tqdm = "^4.66.2"
h5io = "^0.2.2"
plotly = "^5.20.0"

[tool.poetry.group.dev.dependencies]
plotly = "^5.19.0"
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
